--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "@babel/core": "^7.9.6",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
-    "eslint": "^7.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-eslint": "^6.0.0",
     "gulp-prettier": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "prettier": "^2.0.5"
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
