--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,14 @@
 {
-    "rules": {
-        "semi": ["error", "always"],
-        "quotes": ["error", "single"]
-    }
+  "parserOptions": {
+    "ecmaVersion": 2017,
+    "sourceType": "module"
+  },
+
+  "env": {
+    "es6": true
+  },
+  "rules": {
+    "semi": ["error", "always"],
+    "quotes": ["error", "single"]
+  }
 }
