--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0-beta.2",
+    "gulp-cached": "^1.1.1",
     "gulp-eslint": "^6.0.0",
     "gulp-prettier": "^3.0.0",
     "gulp-sourcemaps": "^2.6.5"
