--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Ben Calder <ben@blindfish.co.uk>",
   "license": "MIT",
   "scripts": {
-    "format": "gulp lint && gulp prettier"
+    "format": "gulp lint && gulp prettier",
+    "build": "NODE_ENV=production gulp"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -18,7 +19,9 @@
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-cached": "^1.1.1",
     "gulp-eslint": "^6.0.0",
+    "gulp-if": "^3.0.0",
     "gulp-prettier": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify-es": "^2.0.0"
   }
 }
